# mctslib

./: .gitignore  CMakeLists.txt  LICENSE.txt  MANIFEST.in  Makefile  README.md  dev_requirements.txt  example.cpp  format.sh  list.txt  mcts.cpp  module.cpp  py.cpp  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_node_binding.py  tests.py  tox.ini
.github/workflows/: pypi.yaml  tests.yml
benchmarks/: benchmark.py
src/: module.cpp
src/algorithm/: hrave.cpp  mcts.cpp
src/environments/: python.cpp
src/mctslib/: __init__.py  _mctslib.cpp  _mctslib_grave.cpp  _mctslib_hrave.cpp  _mctslib_mcts.cpp  _mctslib_rave.cpp  module.cpp  test  test.cpp
src/mctslib/algorithm/: algorithm.h  hrave.cpp  mcts.cpp  mcts.h  pyalg.h
src/mctslib/backpropagate/: backpropagate.h  mcts_backpropagate.cpp  mcts_backpropagate.h
src/mctslib/body/: body.h  mcts_body.h
src/mctslib/cpp/: mcts.h  python_node.h
src/mctslib/environments/: python.cpp
src/mctslib/envs/: __init__.py  hangman_test.ipynb  up_or_right.py
src/mctslib/expand/: expand.h  mcts_expand.cpp  mcts_expand.h
src/mctslib/move/: mcts_cpu_move.cpp  mcts_cpu_move.h  mcts_iter_move.cpp  mcts_iter_move.h  move.h
src/mctslib/node/: python_node.h
src/mctslib/rollout/: mcts_rollout.cpp  rollout.h
src/mctslib/select/: mcts_select.cpp  select.h
src/mctslib/settings/: mcts_settings.h  settings.h
src/mctslib/stats/: mcts_stats.h  (+1 more)
src/util/: nodeclass.cpp  nodestats.cpp
tests/: test_add.py  test_double.py  test_grave.py  test_hrave.py  test_mcts.py  test_rave.py  test_sub.py
tests/envs/: up_or_right.py
(+65 files in other folders)
